@@ -1,6 +1,9 @@
 next version
 ----------------
 
+- inheritance cleanup: inherited versions for a project are now shadowed
+  and not shown anymore with getreleaselinks() or in +simple pages.
+
 - fix issue16: enrich projectconfig json with a "+shadow" file which
   lists shadowed "versions"
 
